# dodge

./: .gitignore  .releaserc.json  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  package-lock.json  package.json  pyproject.toml  test.dg
.github/workflows/: cd.yml  ci.yml
compiler/: .gitignore  Cargo.toml  README.md
compiler/dgc/: Cargo.toml
compiler/dgc/src/: lib.rs  main.rs
compiler/dgc/src/alloc/: linear.rs
compiler/dgc/src/app/: dgc.rs  mod.rs
compiler/dgc/src/app/dto/: event.rs
compiler/dgc/src/core/: mod.rs
compiler/dgc/src/core/collection/list/: array_list.rs  mod.rs
compiler/dgc/src/core/collection/map/: mod.rs
compiler/dgc/src/core/ecs/: entity.rs  world.rs
compiler/dgc/src/feature/parse/: component.rs  mod.rs
compiler/dgc_ads/: Cargo.toml
compiler/dgc_alloc/: Cargo.toml
compiler/dgc_ast/: Cargo.toml
compiler/dgc_diag/: Cargo.toml
compiler/dgc_driver/: Cargo.toml
compiler/dgc_ecs/: Cargo.toml
compiler/dgc_interface/: Cargo.toml
compiler/src/: lib.rs  (+1 more)
crates/dgc/: .env.example  Cargo.toml
crates/dgc/src/: cli.rs  db.rs  dgc.pest  dgc.rs  err.rs  event.rs  ir.rs  lib.rs  main.rs
crates/dgc/src/domain/: entity.rs  mod.rs
crates/dgc/src/domain/common/: component.rs  entity.rs
crates/dgc/src/domain/lexing/: component.rs  system.rs
crates/dgc/src/ecs/: component.rs  entity.rs  mod.rs  system.rs
crates/dgc/src/ecs/component/: component.rs  mgr.rs  mod.rs
crates/dgc/src/ecs/system/: mgr.rs  mod.rs  system.rs
crates/dgc/src/ecs/world/: mgr.rs  mod.rs  world.rs
crates/dgc/src/lexing/: component.rs  system.rs
crates/dgc/src/query/: compile.rs  mod.rs  parse.rs
crates/dgc/src/util/: bits.rs  event_bus.rs  mod.rs  thread_pool.rs
crates/dgc/tests/: sample.dg
dgc/: .clang-tidy  .gitgnore  Cargo.toml  meson.build
dgc/include/: dgc.h  ecs.h
dgc/include/dgc/: event.h
dgc/include/ecs/: entity.h  world.h
dgc/include/util/: eventbus.h  vec.h
dgc/src/: db.rs  dgc.c  lib.rs  main.c  main.rs
dgc/src/diagnostic/: diagnostic.rs  span.rs
dgc/src/ecs/: entity.c
dgc/src/ir/: ast.rs  diagnostic.rs  mod.rs  source.rs  spanned.rs  tokens.rs
dgc/src/query/: compile.rs  lex.rs  mod.rs  parse.rs
docs/: README.md  design.drawio  design.md  spec.md
lib/: README.md
src/: lib.rs  main.rs
tools/: README.md
(+39 files in other folders)
