[package]
name = "dgc"
version = "0.1.0"
edition = "2021"

[dependencies]
ariadne = { version = "0.5", features = ["auto-color"] }
bitvec = { version = "1" }
chumsky = { version = "1.0.0-alpha.8", git = "https://github.com/zesterer/chumsky", branch = "main" }
clap = { version = "4", features = ["derive"] }
logos = { version = "0.15" }
rayon = { version = "1" }
salsa = { version = "*", git = "https://github.com/salsa-rs/salsa", branch = "master", features = [] }
thiserror = { version = "2" }