[package]
name = "dgc"
version = "0.0.0"
edition = "2024"

[dependencies]
# tidy-alphabetical-start
anyhow = { version = "1" }
clap = { version = "4", features = ["derive", "help"] }
dgc_ecs = { path = "../dgc_ecs" }
heapless = { version = "0.8" }
rayon = { version = "1" }
thiserror = { workspace = true }
# tidy-alphabetical-end

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { version = "0.6" }
